--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 
 <body>
     <main>
-        <h1>Lyndon B. Johnson</h1>
+        <h1>Lyndon Baines Johnson - 36th President of the United States of America</h1>
         <section>
             <h2>Lyndon Photos</h2>
             <!-- TODO: Add link to LBJ Wiki articls -->
             <p>See more <a target="_blank" href="https://en.wikipedia.org/wiki/Lyndon_B._Johnson">Lyndon B. Johnson</a>
                 on his Wikipedia page.</p>
             <a href="attributes\LyndonJohnson.jpg">
+                <figure>
                 <img src="attributes\LyndonJohnson.jpg" alt="Official Persidential White House photo"></a>
+                <figcaption>Official Persidential White House photo</figcaption>
+            </figure>
         </section>
         <section>
             <h2>LBJ Lists</h2>
